--- a/client/src/styles/Connect.css
+++ b/client/src/styles/Connect.css
@@ -4,7 +4,7 @@
 }
 
 #newsletter-text {
-  background: #e75e26;
+  background: #ededed;
   overflow: hidden;
 }
 
@@ -31,7 +31,7 @@
   line-height: 115%;
   letter-spacing: -1px;
   margin: 20px auto;
-  background: #e75e26;
+  background: #ededed;
 }
 
 @media (max-width: 700px) {
@@ -53,6 +53,11 @@
   text-transform: uppercase;
   font-size: 18px;
   color: #111111;
+}
+
+#newsletter-text input::placeholder {
+  font-weight: 600;
+  opacity: .5;
 }
 
 #newsletter-text form button {
