--- a/client/src/styles/EventPage.css
+++ b/client/src/styles/EventPage.css
@@ -7,23 +7,27 @@
   display: block;
   width: 60%;
   margin: 40px auto;
-  border: 3px #ededed solid;
-  border-radius: 5px;
 }
 
  #event-page h1 {
   margin: auto;
   width: 60%;
   text-align: left;
-  font-size: 42px
+  font-size: 42px;
+  letter-spacing: -1px;
 }
 
  #event-page h4 {
+  font-size: 24px;
+  text-transform: uppercase;
   margin: 40px auto;
   width: 60%;
 }
 
  #event-page p {
+  font-family: 'Rajdhani';
+  text-transform: uppercase;
+  line-height: 150%;
   display: block;
   margin: auto;
   width: 60%;
