--- a/client/src/styles/HeroImage.css
+++ b/client/src/styles/HeroImage.css
@@ -12,10 +12,18 @@
   position: absolute;
   font-size: 70px;
   letter-spacing: -2px;
-  bottom: 0;
+  top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0px;
+}
+
+#hero-image img {
+  position: absolute;
+  left: 50%;
+  top: calc(100vh - 120px);
   transform: translateX(-50%);
-  margin-bottom: 40px;
+  opacity: 1;
 }
 
 @media (max-width: 820px) {
