--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -6,7 +6,7 @@
 /* AboutDescription */
 #about-description {
   overflow: hidden;
-  padding: 40px 0;
+  padding: 80px 0px 40px 0px;
 }
 
 #about-description svg {
