--- a/client/src/styles/Carousel.css
+++ b/client/src/styles/Carousel.css
@@ -14,6 +14,12 @@
   transition: opacity 3s;
 }
 
+@media (max-width: 700px) {
+  #image-container {
+    height: calc(100vw / (16 / 9));
+  }
+}
+
 /* Position Buttons */
 #circle-container {
   display: flex;
