--- a/client/src/styles/NewsletterSignUp.css
+++ b/client/src/styles/NewsletterSignUp.css
@@ -1,17 +1,34 @@
 #newsletter-sign-up {
   background: #ededed;
   overflow: hidden;
+  height: 230px;
+}
+
+#newsletter-sign-up h1 {
+  color: #111111;
+  font-size: 48px;
+  line-height: 230px;
 }
 
 #newsletter-sign-up h2 {
   text-align: center;
   font-family: 'Oswald';
   font-weight: 600;
-  font-size: 48px;
+  font-size: 50px;
   letter-spacing: -2px;
   color: #111111;
   text-transform: uppercase;
   margin-top: 20px;
+}
+
+#newsletter-sign-up p {
+  color: #111111;
+  text-align: center;
+  font-family: 'Rajdhani';
+  font-size: 22px;
+  font-weight: 600;
+  margin: 4px 0px 10px 0px;
+  text-transform: uppercase;
 }
 
 #newsletter-sign-up input {
