--- a/client/src/styles/PrivateEvents.css
+++ b/client/src/styles/PrivateEvents.css
@@ -132,8 +132,7 @@
   font-size: 24px;
   line-height: 175%;
   text-transform: uppercase;
-  text-align: justify;
-  text-align-last: center;
+  text-align: center;
   letter-spacing: 0;
 }
 
