--- a/client/src/styles/EventPage.css
+++ b/client/src/styles/EventPage.css
@@ -3,18 +3,18 @@
   min-height: calc(100vh - 50px);
 }
 
+#event-page h1 {
+ margin: auto;
+ width: 60%;
+ text-align: left;
+ font-size: 42px;
+ letter-spacing: -1px;
+}
+
 #event-page img {
   display: block;
   width: 60%;
   margin: 40px auto;
-}
-
- #event-page h1 {
-  margin: auto;
-  width: 60%;
-  text-align: left;
-  font-size: 42px;
-  letter-spacing: -1px;
 }
 
  #event-page h4 {
@@ -37,4 +37,19 @@
   display: block;
   margin: 40px auto;
   width: 60%;
+}
+
+@media (max-width: 700px) {
+  #event-page {
+    padding: 40px 0px;
+    margin: 0px 40px;
+  }
+
+  #event-page img,
+  #event-page h1,
+  #event-page h4,
+  #event-page p,
+  #event-page button {
+    width: 100%;
+  }
 }
