--- a/client/src/styles/HeroImage.css
+++ b/client/src/styles/HeroImage.css
@@ -18,11 +18,10 @@
   margin: 0px;
 }
 
-#hero-image img {
+#down-arrow {
   position: absolute;
-  left: 50%;
+  left: calc(50% - 20px);
   top: calc(100vh - 120px);
-  transform: translateX(-50%);
   opacity: 1;
 }
 
