--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -91,12 +91,14 @@
   font-size: 14px;
 }
 
-/* Map */
-#footer-map {
-  width: 100px;
-  height: 100px;
+#footer-logo {
+  margin-bottom: 50px;
 }
 
+#footer-address {
+  position: relative;
+  top: 10px;
+}
 
 /* Byline */
 #footer-byline {
@@ -109,13 +111,6 @@
 #copyright {
   font-size: 10px;
   padding-bottom: 30px;
-}
-
-.by {
-  font-size: 14px;
-  margin-bottom: 30px;
-  text-decoration: none;
-  color: #ededed;
 }
 
 /* Responsive Design */
